<resources>
    <string name="app_name">Unquote</string>
    <string name="questions_remaining">questions\nremaining</string>
    <string name="button_submit">Submit</string>
    <string name="an_image_quote">An Image quote</string>
    <string name="button">Button</string>
    <string name="text_view">TextView</string>
    <string name="score">Score</string>
    <string name="answer_choice">✔  </string>
</resources>